--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -37,7 +37,7 @@
         <div class="d-flex">
             <div class="navbar-brand">
                 <a class="logo-text" href="index.html">
-                    Raquel
+                    S/B
                 </a>
             </div>
             <button class="toggler-menu">
@@ -60,17 +60,17 @@
             </div>
             <ul class="nav nav-menu">
                 <li>
-                    <a class="nav-link active" href="http://localhost:8080/" data-toggle="tooltip" title="HOME">
+                    <a class="nav-link active" href="https://www.sealonthebeach.com/" data-toggle="tooltip" title="HOME">
                         <i class="fas fa-house-damage"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="http://localhost:8080/#random" data-toggle="tooltip" title="RANDOM NOTES">
+                    <a class="nav-link" href="https://www.sealonthebeach.com/#random" data-toggle="tooltip" title="RANDOM NOTES">
                         <i class="fas fa-pen"></i>
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="http://localhost:8080/#planning" data-toggle="tooltip" title="REDISCOVERING PLANNING">
+                    <a class="nav-link" href="https://www.sealonthebeach.com/#planning" data-toggle="tooltip" title="REDISCOVERING PLANNING">
                         <i class="far fa-building"></i>
                     </a>
                 </li>
