--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -23,6 +23,16 @@
     <link href="/static/plugin/scroll/jquery.mCustomScrollbar.min.css" rel="stylesheet">
     <!-- theme css -->
     <link href="/static/css/style.css" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T573XS83V1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-T573XS83V1');
+    </script>
 </head>
 <!-- Body Start -->
 
