--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,13 +3,13 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T573XS83V1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66MEQK7LW6"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-T573XS83V1');
+    gtag('config', 'G-66MEQK7LW6');
     </script>
     <!-- metas -->
     <meta charset="utf-8">
