--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,17 +11,29 @@
 
     gtag('config', 'G-66MEQK7LW6');
     </script>
-    <!-- metas -->
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=630e44d00b5e930012a9c396&product=inline-share-buttons" async="async"></script>    <!-- metas -->
     <meta charset="utf-8">
     <meta name="author" content="themepaa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="Nairo - Portfolio Template">
     <meta name="description" content="Nairo - Portfolio Template">
+
+
     <!-- title -->
     <title> S/B-{{title}}</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <! -- social media -- !>
+    <meta property="og:image" content="{{image}}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{{title}}" />
+    <meta property="og:description" content="{{description}}"/>
+        
+    
+
+    
+    
     <!-- plugin CSS -->
     <link href="/static/plugin/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/plugin/font-awesome/css/all.min.css" rel="stylesheet">
