--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -11,29 +11,29 @@
 
     gtag('config', 'G-66MEQK7LW6');
     </script>
+
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=630e44d00b5e930012a9c396&product=inline-share-buttons" async="async"></script>    <!-- metas -->
+    
     <meta charset="utf-8">
-    <meta name="author" content="themepaa">
+    <meta name="author" content="Moozhan Shakeri">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Nairo - Portfolio Template">
-    <meta name="description" content="Nairo - Portfolio Template">
-
-
-    <!-- title -->
-    <title> S/B-{{title}}</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <meta name="keywords" content="digital, media studies, urban planning, urban, game, game design, digital platform, platform">
+    <meta name="description" content="Moozhan Shakeri's Website">
     <! -- social media -- !>
     <meta property="og:image" content="{{image}}" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
-        
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
     
 
-    
-    
+    <!-- title -->
+    <title> S/B-{{title}}</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     <!-- plugin CSS -->
     <link href="/static/plugin/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/plugin/font-awesome/css/all.min.css" rel="stylesheet">
