--- a/src/_includes/layouts/blog.njk
+++ b/src/_includes/layouts/blog.njk
@@ -6,7 +6,7 @@
         <div class="single-blog">
             <div class="container">
                 <div class="blog-feature-img">
-                    <img src="/{{image}}" title="" alt="">
+                    <img src="{{image}}" title="" alt="">
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -16,7 +16,6 @@
                                 <h6><a href="#">{{category}}</a></h6>
                                 <h2>{{title}}</h2>
                                 <div class="media">
-
                                     <div class="media-body">
                                         <span>{{published}}</span>
                                     </div>
