--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -22,11 +22,14 @@
     <meta name="description" content="Moozhan Shakeri's Website">
     <! -- social media -- !>
     <meta property="og:image" content="{{image}}" />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
-    <meta property='og:image:width' content='1200' />
-    <meta property='og:image:height' content='627' />
+    <meta name="twitter:card" content="summary_large_image">
+
+
     
 
     <!-- title -->
