--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<head>
+<head prefix="og: https://ogp.me/ns#">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-66MEQK7LW6"></script>
     <script>
