--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -27,6 +27,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
+    <meta name="twitter:card" content="summary || summary_large_image || player || app"/>
+    <meta name="twitter:creator" content="@username-example" />
     <meta name="twitter:card" content="summary_large_image">
 
 
