--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,9 @@
     gtag('config', 'G-66MEQK7LW6');
     </script>
 
-    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=630e44d00b5e930012a9c396&product=inline-share-buttons" async="async"></script>    <!-- metas -->
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=630e40900b5e930012a9c394&product=inline-share-buttons' async='async'></script>    
+    
+    <!-- metas -->
     
     <meta charset="utf-8">
     <meta name="author" content="Moozhan Shakeri">
@@ -29,9 +31,7 @@
     <meta property="og:description" content="{{description}}"/>
     <meta name="twitter:card" content="summary || summary_large_image || player || app"/>
     <meta name="twitter:creator" content="@username-example" />
-    <meta name="twitter:card" content="summary_large_image">
-
-
+    <meta name="twitter:card" content="summary_large_image" />
     
 
     <!-- title -->
