--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -23,7 +23,7 @@
     <meta name="keywords" content="digital, media studies, urban planning, urban, game, game design, digital platform, platform">
     <meta name="description" content="Moozhan Shakeri's Website">
     <! -- social media -- !>
-    <meta property="og:image/jpg" content="{{image}}" />
+    <meta property="og:image/jpg" content="https://www.sealonthebeach.com/{{image}}" />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
     <meta property="og:type" content="website" />
