--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-<head prefix="og: https://ogp.me/ns#">
+<head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-66MEQK7LW6"></script>
     <script>
@@ -24,6 +24,7 @@
     <meta name="description" content="Moozhan Shakeri's Website">
     <! -- social media -- !>
     <meta property="og:image" content="https://www.sealonthebeach.com{{image}}" />
+    <meta property="og:image:type" content="image/jpeg" /> 
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
     <meta property="og:type" content="website" />
