--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -24,6 +24,7 @@
     <meta name="description" content="Moozhan Shakeri's Website">
     <! -- social media -- !>
     <meta property="og:image:secure_url" content="https://www.sealonthebeach.com/static/img/blogImage/1.jpg" />
+    <meta name="twitter:image" content="https://www.sealonthebeach.com/static/img/blogImage/1.jpg"></meta>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
