--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -23,12 +23,12 @@
     <meta name="keywords" content="digital, media studies, urban planning, urban, game, game design, digital platform, platform">
     <meta name="description" content="Moozhan Shakeri's Website">
     <! -- social media -- !>
-    <meta property="og:image:secure_url" content="https://www.sealonthebeach.com/static/img/blogImage/1.jpg" />
-    <meta name="twitter:image" content="https://www.sealonthebeach.com/static/img/blogImage/1.jpg"></meta>
+    <meta property="og:image" content="https://www.sealonthebeach.com/static/img/blogImage/3.jpg" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
-    
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@MoozhanS" />
 
     <!-- title -->
     <title> S/B-{{title}}</title>
