--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,7 +12,6 @@
     gtag('config', 'G-66MEQK7LW6');
     </script>
 
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=630e40900b5e930012a9c394&product=inline-share-buttons' async='async'></script>    
     
     <!-- metas -->
     
@@ -22,14 +21,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="digital, media studies, urban planning, urban, game, game design, digital platform, platform">
     <meta name="description" content="Moozhan Shakeri's Website">
+
     <! -- social media -- !>
     <meta property="og:image" content="https://www.sealonthebeach.com/static/img/blogImage/3.jpg" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@MoozhanS" />
 
+
+    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=630e40900b5e930012a9c394&product=inline-share-buttons' async='async'></script>
     <!-- title -->
     <title> S/B-{{title}}</title>
     <!-- Favicon -->
