--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -23,7 +23,7 @@
     <meta name="description" content="Moozhan Shakeri's Website">
 
     <! -- social media -- !>
-    <meta property="og:image" content="https://www.sealonthebeach.com/static/img/blogImage/3.jpg" />
+    <meta property="og:image" content="https://www.sealonthebeach.com{{image}}" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="300" />
     <meta property="og:type" content="website" />
