--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{title}}" />
     <meta property="og:description" content="{{description}}"/>
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@MoozhanS" />
 
 
